--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,9 +42,19 @@ h1,h2,h3,h4,h5,h6 {
   opacity:0.75;
 }
 .title {
-  font-size: 40px !important;
+  font-size: 36px;
   position: absolute;
   color:#fff;
+}
+@media screen and (max-width: 420px){
+  .title {
+    font-size:24px !important;
+  }
+}
+@media screen and (max-width: 720px){
+  .title {
+    font-size:28px !important;
+  }
 }
 .title a {
   display:block;
