--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,19 +46,32 @@ h1,h2,h3,h4,h5,h6 {
   position: absolute;
   color:#fff;
 }
-@media screen and (max-width: 420px){
+@media screen and (max-width: 520px){
   .title {
-    font-size:24px !important;
+    width: 80vw;
+    font-size:24px;
+    /* text-align: center;
+    left:10%;
+    right:10%;
+    transform: translate(-50%,0); */
   }
 }
-@media screen and (max-width: 720px){
+@media screen and (min-width: 521px) and (max-width: 720px){
   .title {
-    font-size:28px !important;
+    font-size:28px;
+    /* left:10%;
+    right:10%;
+    transform: translate(-50%,0); */
   }
 }
+
 .title a {
   display:block;
-  float:left;
+  /* float:left; */
+  max-width: 50%;
+  min-width: 170px;
+  position: absolute;
+  /* left: 12px; */
   font-size:80%;
   border:2px solid #fff;
   margin-right:auto;
@@ -68,12 +81,11 @@ h1,h2,h3,h4,h5,h6 {
 }
 .name, .fa-2x {
   color:#04C2C9;
+  user-select: none;
 }
 #navbar {
   border-bottom: 3px solid #04C2C9;
   margin-bottom:-60px;
-  
-  /* transition: all 0.5s ease-in-out; */
 }
 #navbar .nav-item .nav-link {
   transition: all 0.5s;
@@ -155,6 +167,7 @@ h1,h2,h3,h4,h5,h6 {
 /* Skill columns styling */
 
 .skill {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   max-width: 175px;
@@ -221,11 +234,26 @@ h1,h2,h3,h4,h5,h6 {
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25)
 }
 .skill > p {
-  font-size:1.7vw;
+  font-size:18px;;
 }
 @media screen and (max-width: 820px) {
   #diagram {
     display: none;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .skill .percent {
+    position: absolute;
+    bottom:60px !important;
+  }
+  .skill >p {
+    position: absolute;
+    bottom:0 !important;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .skill >p {
+    font-size:24px;;
   }
 }
 
@@ -350,12 +378,6 @@ ul.accordion{
   transition: all 0.5s ease-in-out;
 }
 
- .tab:hover {
-  border-radius: 10px;
-}
-.tab:hover .social a::before {
-  /* margin-top:100px; */
-}
 .tab:hover .social a::after {
   margin-top:0px;
 }
